# robotframework-selenium2screenshots

./: .gitignore  CHANGES.txt  MANIFEST.in  Makefile  README.rst  libdoc.sh  requirements.txt  setup.cfg  setup.nix  setup.py
docs/: conf.py  index.rst  keywords.html  requirements.txt
src/Selenium2Screenshots/: __init__.py  keywords.robot
