[metadata]
name = robotframework-selenium2screenshots
version = 0.8.1.dev0
description = Robot Framework keyword library for capturing annotated screenshots with Selenium2Library
long_description = file: README.rst, CHANGELOG.rst
keywords = sphinx, extension, http, rest, documentation
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://github.com/collective/sphinxcontrib-httpexample
license = GPL version 2
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
instsll_requires =
    setuptools
    robotframework>=3.0.2
    robotframework-selenium2library>=3.0.0b1
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
docs =
    sphinx
    pillow
    sphinxcontrib-robotframework
PIL =
    PIL
Pillow =
    pillow

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,build,dist
max-complexity = 20

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
